<resources>
    <string name="app_name">ToDoList2</string>
    <!-- settings depuis le main -->
    <string name="action_settings">Settings</string>
    <string name="action_voirListe">Voir les listes de tâches</string>

    <!-- NewTaskActivity string -->
    <string name="title_activity_new_task">NewTaskTitle</string>
    <string name="text_view_tache">Que faut-il faire?</string>
    <string name="edit_view_tache">Entrez tâche ici</string>
    <string name="text_view_date">Date limite</string>
    <string name="edit_view_date">Date a rentrer</string>
    <string name="edit_view_time">Rentrer heure</string>
    <string name="text_view_repetition">Répétition</string>
    <string name="edit_view_repetition">Tout les X temps</string>
    <string name="text_view_liste">Ajouter à la liste</string>
    <string name="edit_view_liste">Par defaut</string>
    <string name="title_activity_settings">Settings</string>
    <string name="newTaskSubmit">Envoyer</string>

    <!-- General settings -->

    <string name="pref_general_title">Général</string>
    <string name="pref_sync">Vibration</string>
    <string name="pref_sync_summ">Activée</string>
    <string name="pref_syncConnectionType">Param 1</string>
    <string name="pref_syncConnectionTypes_default">Default value Param 2</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_sync_sonnerie">Sonnerie</string>
    <string name="pref_sync_son">Son</string>
    <string name="pref_sync_delais">Notifications de la tâche</string>
    <string name="pref_sync_sum_delais">A heure définie</string>
    <string name="pref_sync_google_facebook_title">Synchronisation avec Google Facebook</string>
    <string name="pref_sync_google">Compte Google</string>
    <string name="pref_sync_sum_google">Non defini</string>
    <string name="pref_sync_facebook">Compte Facebook</string>
    <string name="pref_sync_sum_facebook">Non defini</string>


    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
