<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_title"
        android:key="pref_key_general_settings">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:defaultValue="true" />
        <ListPreference
            android:dependency="pref_sync"
            android:key="pref_syncConnectionType"
            android:title="@string/pref_syncConnectionType"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:defaultValue="@string/pref_syncConnectionTypes_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notifications_title"
        android:key="pref_key_general_settings">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync_param3"
            android:summary="@string/pref_sync_summ_3"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>